Bug 199811 - Desktop icon created by drag'n'dropping an URL shows wrong name/isn't editable
Summary: Desktop icon created by drag'n'dropping an URL shows wrong name/isn't editable
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-misc (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Unspecified
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2009-07-11 23:00 UTC by Elias Probst
Modified: 2012-04-20 20:22 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elias Probst 2009-07-11 23:00:54 UTC
Version:            (using KDE 4.2.96)
Installed from:    SuSE RPMs

A desktop icon created by drag'n'dropping an URL to the desktop shows only 'http' or a filename as name and isn't editable.

How to reproduce:

Case A:
→ Open a webbrowser (e.g. Konqueror)
→ Go to a website (e.g. http://kde.org)
→ Drag'n'drop the favicon from the addressbar to the desktop
→ The desktop icon's name is only 'http'

Case B:
→ Open a webbrowser (e.g. Konqueror)
→ Go to a website (e.g. http://kde.org)
→ Click on an internal link on this site (e.g. Sitemap)
→ Drag'n'drop the favicon from the addressbar to the desktop
→ The desktop icon's name is only 'family' (as in http://kde.org/family where the 'Sitemap' link points to)

Expected result:
A desktop icon which name is http://kde.org (Case A) or http://kde.org/family (Case B)

Furthermore it isn't possible editing the name of the desktop icon in any way:

Case A:
→ The properties dialog doesn't show any text input fields to change the name

Case B:
→ The properties dialog shows a text input field, but it's content isn't editable
Comment 1 Beat Wolf 2009-12-23 17:20:57 UTC
SVN commit 1065548 by beatwolf:

partial fix for 199811, case A has been solved
CCBUG:199811


 M  +6 -3      icon.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1065548
Comment 2 Nicolas L. 2010-06-07 10:04:49 UTC
i don't know if i am right bug Case A seems valid, for ex if my url is http://www2.mandriva.com/downloads/  the icon will be called downloads
Comment 3 Nicolas L. 2010-06-16 10:15:01 UTC
forget comment #2 is ok now ( i must have wrongly tested )
Comment 4 Nicolas L. 2010-06-16 10:18:28 UTC
for B it have not created a .desktop for me but copied the webpage on the desktop
Comment 5 Nicolas L. 2010-06-16 10:21:31 UTC
for case B we have to see when when link and when we copy.

When we link it works OK for me, when we copy if the URL is http://kde.org/workspaces/ the icon have "workspaces" as name
Comment 6 Wonko 2010-11-11 17:00:23 UTC
This still happens with 4.5.3. While it is a nice feature to just drag a favicon onto the desktop, it's not very useful now, when the name does not tell me what the URL of this link actually is. If only I could edit it, but this is not possible, probably not even by manipulating the plasma-desktop-appletsrc file directly. Here is an entry for my online banking URL:

[Containments][47][Applets][134]
geometry=168,443,93,72
immutability=1
plugin=icon
zvalue=0

[Containments][47][Applets][134][Configuration]
Url=https://bankingportal.sparkasse-koelnbonn.de/portal/portal/Starten

So there isn't even a name I could change. Or could one add something like 'name="Online Banking"'?

Oh, and another thing: The icon (the white one showing a blue glob) first had the favicon added to the top right, but after a restart that is gone, I only see the icon. And the name 'Starten' is the only thing telling me this is the access for my banking account. That's not very intuitive :)
Comment 7 Gregor Tätzner 2012-01-11 20:16:58 UTC
Git commit a0fd4056bdb115bd74e4e50a0c5b12d2462fa92f by Gregor Tätzner.
Committed on 11/01/2012 at 20:57.
Pushed by gregort into branch 'master'.

desktop icon drag'n'drop url name

I have added an additional check so the desktop icon gets a pretty name
when you drag and drop a favicon onto the desktop.
REVIEW: 103435

M  +3    -0    plasma/generic/applets/icon/icon.cpp

http://commits.kde.org/kde-workspace/a0fd4056bdb115bd74e4e50a0c5b12d2462fa92f
Comment 8 Gregor Tätzner 2012-04-20 20:22:02 UTC
Git commit 246d9bcc81878977d68c3cc030f1b6fd2e28cb87 by Gregor Tätzner.
Committed on 11/01/2012 at 20:57.
Pushed by gregort into branch 'KDE/4.8'.

desktop icon drag'n'drop url name

I have added an additional check so the desktop icon gets a pretty name
when you drag and drop a favicon onto the desktop.
REVIEW: 103435

M  +3    -0    plasma/generic/applets/icon/icon.cpp

http://commits.kde.org/kde-workspace/246d9bcc81878977d68c3cc030f1b6fd2e28cb87