desktop icon drag'n'drop url name

I have added an additional check so the desktop icon gets a pretty name
when you drag and drop a favicon onto the desktop.

BUG: 199811
REVIEW: 103435